<resources>

	<string name="app_name">CrashCourse</string> <!-- roadstop? -->
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="add_new">Submit new location</string>
	<string name="credits">Credits</string>
	<string name="icon">Icon</string>
	<string name="map_type">Map Type</string>
	<string name="satellite">Satellite</string>
	<string name="hybrid">Hybrid</string>
	<string name="Map">Map</string>
	<string name="terrain">Terrain</string>
	<string name="quit">Quit Game</string>
	<string name="pause">Pause Game</string>
	<string name="help">Help</string>
	<string name="help1">How to play the game</string>
	<string name="share">Share Score</string>
	<string name="help_text">Run towards the heart orbs to collect them and increase your time limit. \nCollect 9 out of 10 orbs to advance to the next round. \nTry to get through the most rounds and share the results with your friends! \n \nRemember, don\'t get hit by a car or be stupid.</string>
	<string name="demobtn">Demo mode toggle</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="game_id">352204583034</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
</resources>