<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    
    <item android:id="@+id/menu_quit"
        android:title="@string/quit"
        android:orderInCategory="100"
        app:showAsAction="never" />
    
    
    <item android:id="@+id/credits" app:showAsAction="never" android:title="@string/credits"></item>
<item
    android:id="@+id/more"
    android:icon="@drawable/ic_menu_mapmode"
    app:showAsAction="always|withText"
    android:title="@string/map_type">
    <menu>
        <item
    android:id="@+id/satellite"
            app:showAsAction="ifRoom|withText"
    android:title="@string/satellite"/>
        <item
    android:id="@+id/hybrid"
            app:showAsAction="ifRoom|withText"
    android:title="@string/hybrid"/>
	<item
	    android:id="@+id/map_only"
        app:showAsAction="ifRoom|withText"
	    android:title="@string/Map"/>
	<item
    android:id="@+id/terrain"
        app:showAsAction="ifRoom|withText"
    android:title="@string/terrain"/>
        </menu> 
        </item>
        <item android:id="@+id/help" android:icon="@drawable/ic_menu_help" android:title="@string/help" app:showAsAction="ifRoom"></item>
        <item android:id="@+id/share" android:icon="@drawable/ic_menu_share" android:title="@string/share" app:showAsAction="always"></item>
        <item android:id="@+id/demo_mode" android:title="@string/demobtn"></item>
</menu>
